--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,117 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Cascadia Code";
+  src: url("../../fonts/CascadiaMono.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.glow {
+    color: #f59e0b;
+    text-shadow:
+      0 0 5px #f59e0b,
+      0 0 8px #f59e0b;
+  }
+  
+
+.crt {
+  position: relative;
+  overflow: hidden;
+}
+
+.crt::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.8);
+  z-index: 1;
+}
+
+/*Adapted from http://aleclownes.com/2017/02/01/crt-display.html*/
+
+.crt-scanlines::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.15) 50%), /* Adjusted alpha value here */
+      linear-gradient(
+        90deg,
+        rgba(255, 0, 0, 0.06),
+        rgba(0, 255, 0, 0.02),
+        rgba(0, 0, 255, 0.06)
+      );
+    z-index: 2;
+    background-size:
+      100% 2px,
+      3px 100%;
+    pointer-events: none;
+  }
+  
+
+/*This adds a "flickering screen" effect*/
+.crt-flicker::after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(18, 16, 16, 0.1);
+    opacity: 0;
+    z-index: 2;
+    pointer-events: none;
+    animation: flicker 0.15s infinite;
+  }
+  
+  @keyframes flicker {
+    0% { opacity: 0.2393; }
+    5% { opacity: 0.3238; }
+    10% { opacity: 0.2080; }
+    15% { opacity: 0.6031; }
+    20% { opacity: 0.1906; }
+    25% { opacity: 0.5694; }
+    30% { opacity: 0.4529; }
+    35% { opacity: 0.4890; }
+    40% { opacity: 0.2327; }
+    45% { opacity: 0.5964; }
+    50% { opacity: 0.6801; }
+    55% { opacity: 0.1429; }
+    60% { opacity: 0.2015; }
+    65% { opacity: 0.5099; }
+    70% { opacity: 0.3845; }
+    75% { opacity: 0.3363; }
+    80% { opacity: 0.5071; }
+    85% { opacity: 0.5021; }
+    90% { opacity: 0.4501; }
+    95% { opacity: 0.3060; }
+    100% { opacity: 0.2419; }
+  }
+
+  .command-input {
+    width: 100%;
+    background-color: #0a0a0a;
+    border: none;
+    outline: none;
+    color: #f59e0b;
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
+
+  .command-input:focus {
+    animation: blink 1s step-end infinite;
+  }
